--- a/.github/workflows/helium.yaml
+++ b/.github/workflows/helium.yaml
@@ -35,7 +35,7 @@ jobs:
         env:
           PATH: /usr/lib/chromium-browser/:$PATH
         run: |
-          python helium_test.py
+          python tests/helium_test.py
 
       - name: Upload screenshot and logs as artifacts
         uses: actions/upload-artifact@v4
