--- a/.github/workflows/helium.yaml
+++ b/.github/workflows/helium.yaml
@@ -2,7 +2,7 @@ name: Helium Test Workflow
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature** ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
