--- a/.github/workflows/helium.yaml
+++ b/.github/workflows/helium.yaml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  schedule:
+    # Runs daily at 20:33 IST (15:03 UTC)
+    - cron: '3 15 * * *'
 
 jobs:
   helium-test:
