--- a/.github/workflows/helium.yaml
+++ b/.github/workflows/helium.yaml
@@ -8,9 +8,9 @@ on:
   workflow_dispatch:
   schedule:
     # Runs daily at 20:33 IST (15:03 UTC)
-    - cron: '3 15 * * *'
+    #- cron: '3 15 * * *'
     # Runs every 5 minutes
-    - cron: '*/2 * * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   helium-test:
