--- a/.github/workflows/helium.yaml
+++ b/.github/workflows/helium.yaml
@@ -10,7 +10,7 @@ on:
     # Runs daily at 20:33 IST (15:03 UTC)
     #- cron: '3 15 * * *'
     # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    # - cron: '*/5 * * * *'
 
 jobs:
   helium-test:
